--- a/index.html
+++ b/index.html
@@ -4,81 +4,151 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Usage Tracker</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">
-            <i class="fas fa-robot"></i> AI Usage Tracker
+            <i class="fas fa-robot"></i> AI Tracker
         </div>
-        <div class="nav-links">
+        <button class="hamburger" id="hamburger" aria-label="Toggle menu">
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="nav-links" id="nav-links">
             <a href="#dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+            <a href="#insights"><i class="fas fa-chart-line"></i> Insights</a>
             <a href="#history"><i class="fas fa-history"></i> History</a>
             <a href="#add-service"><i class="fas fa-plus"></i> Add Service</a>
+            <a href="#settings"><i class="fas fa-cog"></i> Settings</a>
         </div>
     </nav>
 
     <div class="container">
+        <!-- Welcome / First-time overlay -->
+        <div id="welcome-overlay" class="modal" style="display:none;">
+            <div class="modal-content welcome-content">
+                <h2>Welcome to AI Usage Tracker!</h2>
+                <p>Track your free-tier AI usage across services like Grok, Claude, Gemini, and more.</p>
+                <p>We've added some popular services for you to get started.</p>
+                <button class="button primary" onclick="closeWelcome()">Get Started</button>
+            </div>
+        </div>
+
+        <!-- Dashboard -->
         <section id="dashboard">
             <h1 class="section-title">Dashboard</h1>
-            <button class="button secondary" onclick="exportData()" style="margin-bottom: 1.5rem;">
-                <i class="fas fa-download"></i> Export Data (JSON)
-            </button>
+
+            <div class="summary-stats" id="summary-stats"></div>
+
+            <div class="card mb-6">
+                <h3>Daily Total Usage Trend (last 14 days)</h3>
+                <div style="height: 260px;"><canvas id="trend-chart"></canvas></div>
+            </div>
+
             <div id="services-cards" class="cards"></div>
         </section>
 
-        <section id="history" style="display: none;">
+        <!-- Insights -->
+        <section id="insights" style="display:none;">
+            <h1 class="section-title">Insights & Analytics</h1>
+
+            <div class="grid-2">
+                <div class="card">
+                    <h3>Usage by Category</h3>
+                    <div style="height: 280px;"><canvas id="category-pie"></canvas></div>
+                </div>
+                <div class="card">
+                    <h3>Usage by Day of Week</h3>
+                    <div style="height: 280px;"><canvas id="dow-bar"></canvas></div>
+                </div>
+            </div>
+
+            <div class="card mt-6">
+                <h3>Forecast & Smart Recommendations</h3>
+                <div id="forecast-content" class="forecast-text"></div>
+            </div>
+
+            <div class="card mt-6">
+                <h3>Streak & Milestones</h3>
+                <p id="streak-info" class="text-xl font-bold"></p>
+            </div>
+        </section>
+
+        <!-- History -->
+        <section id="history" style="display:none;">
             <h1 class="section-title">Usage History</h1>
+            <input type="text" id="history-search" placeholder="Search by service, description or category..." class="form-input mb-4">
             <ul id="history-list"></ul>
         </section>
 
-        <section id="add-service" style="display: none;">
-            <h1 class="section-title">Add New AI Service</h1>
+        <!-- Add Service -->
+        <section id="add-service" style="display:none;">
+            <h1 class="section-title">Add AI Service</h1>
             <form id="add-service-form">
                 <div class="form-group">
+                    <label>Popular Presets</label>
+                    <div class="preset-buttons">
+                        <button type="button" class="preset-btn" data-preset="grok">Grok</button>
+                        <button type="button" class="preset-btn" data-preset="claude">Claude</button>
+                        <button type="button" class="preset-btn" data-preset="gemini">Gemini</button>
+                        <button type="button" class="preset-btn" data-preset="chatgpt">ChatGPT</button>
+                        <button type="button" class="preset-btn" data-preset="perplexity">Perplexity</button>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="service-name">Service Name</label>
-                    <input type="text" id="service-name" required placeholder="e.g. Grok, Claude, Gemini, Perplexity">
+                    <input type="text" id="service-name" required placeholder="e.g. Grok">
                 </div>
                 <div class="form-group">
                     <label for="limit">Free Tier Limit</label>
                     <input type="number" id="limit" required min="1" placeholder="e.g. 50">
                 </div>
                 <div class="form-group">
-                    <label for="refresh-period">Reset / Refresh Period</label>
+                    <label for="refresh-period">Reset Period</label>
                     <select id="refresh-period" required>
                         <option value="daily">Daily</option>
                         <option value="weekly">Weekly</option>
                         <option value="monthly">Monthly</option>
                     </select>
                 </div>
-                <button type="submit" class="button primary">
+                <button type="submit" class="button primary full-width">
                     <i class="fas fa-plus"></i> Add Service
                 </button>
             </form>
         </section>
+
+        <!-- Settings -->
+        <section id="settings" style="display:none;">
+            <h1 class="section-title">Settings</h1>
+            <div class="settings-group">
+                <label>Dark Mode</label>
+                <input type="checkbox" id="dark-mode">
+            </div>
+            <button class="button secondary full-width mb-3" onclick="document.getElementById('import-file').click()">
+                <i class="fas fa-upload"></i> Import Data (JSON)
+            </button>
+            <input type="file" id="import-file" style="display:none;" accept=".json">
+            <button class="button secondary full-width mb-3" onclick="exportData()">
+                <i class="fas fa-download"></i> Export JSON
+            </button>
+            <button class="button secondary full-width mb-3" onclick="exportCSV()">
+                <i class="fas fa-file-csv"></i> Export CSV
+            </button>
+            <button class="button secondary full-width mb-3" onclick="exportPDF()">
+                <i class="fas fa-file-pdf"></i> Export PDF Report
+            </button>
+            <button class="button danger full-width" onclick="clearAllData()">
+                <i class="fas fa-trash"></i> Clear All Data
+            </button>
+        </section>
     </div>
 
-    <!-- Log Usage Modal -->
-    <div id="log-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Log Usage</h2>
-            <form id="log-form">
-                <div class="form-group">
-                    <label for="usage-amount">Amount Used</label>
-                    <input type="number" id="usage-amount" value="1" min="1" required>
-                </div>
-                <div class="form-group">
-                    <label for="usage-description">What did you use it for?</label>
-                    <input type="text" id="usage-description" required placeholder="e.g. Code generation, research question, image generation">
-                </div>
-                <button type="submit" class="button primary">Log</button>
-            </form>
-        </div>
-    </div>
+    <!-- Toast container -->
+    <div id="toast-container"></div>
 
     <script src="script.js"></script>
 </body>
